[package]
name = "blog-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
serde = "1.0.217"
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono", "uuid"] }
lettre = "0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.4"
bcrypt = "0.15"
rand = "0.8"
chrono-tz = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.11.1", features = ["serde", "v4"] }
